--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#2FB0DD" />
     <meta
         name="description"
-        content="Web site created using create-react-app"
+        content="Plateforme de quiz multijoueur en temps réel – Générez des quiz sur des thématiques variées, définissez les options de jeu et jouez avec vos amis"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
