--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -9,7 +9,8 @@
         name="description"
         content="Plateforme de quiz multijoueur en temps réel – Générez des quiz sur des thématiques variées, définissez les options de jeu et jouez avec vos amis"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/lequiz-logo.svg" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -25,6 +26,8 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>LeQuiz.io</title>
+    <!-- Google AdSense Script -->
+    <script data-ad-client="ca-pub-4703711520109755" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 </head>
 <body>
 <noscript>You need to enable JavaScript to run this app.</noscript>
