--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -25,7 +25,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>LeQuiz.io</title>
+    <title>leQuiz.io</title>
     <!-- Google AdSense Script -->
     <script data-ad-client="ca-pub-4703711520109755" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 </head>
